<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <View
        android:id="@+id/view"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/circle_decoration"
        android:translationX="-40dp"
        android:translationY="-40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBack3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="24dp"
        android:background="@drawable/bg_avatar_circle"
        android:backgroundTint="#80FFFFFF"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/Black" />

    <TextView
        android:id="@+id/tvTitleBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="24dp"
        android:text="Lengkapi Biodata"
        android:textColor="@color/teal_700"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleBio">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/teal_500">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nama Lengkap"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/teal_500">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="No. Telepon" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/teal_500">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAlamat"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top"
                android:hint="Alamat Lengkap"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterFinal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:text="Register"
            android:backgroundTint="@color/teal_500"
            app:cornerRadius="30dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>